--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -35,5 +35,8 @@
   "due_summary": "नियत सारांश",
   "profit_summary": "लाभ सारांश",
   "refund_history": "धनवापसी इतिहास",
-  "logout": "लॉगआउट"
+  "logout": "लॉगआउट",
+  "wallet_:_400_aed": "वॉलेट : 400 एईडी",
+  "history": "इतिहास",
+  "reports": "रिपोर्ट"
 }
