--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -35,5 +35,8 @@
   "due_summary": "Due Summary",
   "profit_summary": "Profit Summary",
   "refund_history": "Refund History",
-  "logout": "Logout"
+  "logout": "Logout",
+  "wallet_:_400_aed": "WALLET : 400 AED",
+  "history": "History",
+  "reports": "Reports"
 }
