--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -15,9 +15,10 @@
   "home": "وطن",
   "local": "محلي",
   "international": "دولي",
-  "aed_54.56": "درهم 54.56",
+  "aed": "درهم",
+  "54.56": "54.56",
   "due_balance": "الرصيد المستحق",
-  "aed_1000.00": "درهم 1000.00",
+  "1000.00": "1000.00 ",
   "payment_methods": "طرق الدفع",
   "bank": "بنك",
   "accounts": "حسابات",
