--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -15,9 +15,10 @@
   "home": "Home",
   "local": "Local",
   "international": "International",
-  "aed_54.56": "AED 54.56",
+  "aed": "AED",
+  "54.56": "54.56",
   "due_balance": "Due Balance",
-  "aed_1000.00": "AED 1000.00",
+  "1000.00": "1000.00 ",
   "payment_methods": "Payment Methods",
   "bank": "Bank",
   "accounts": "Accounts",
@@ -25,8 +26,6 @@
   "credit_cards": "Credit Cards",
   "plexpe": "PlexPe",
   "wallet": "Wallet",
-  "plexpe": "PlexPe",
-  "gift_card": "Gift Card",
   "upi_lite": "UPI lite",
   "account_summary": "Account Summary",
   "funds": "Funds",
