--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -15,9 +15,10 @@
   "home": "घर",
   "local": "स्थानीय",
   "international": "अंतरराष्ट्रीय",
-  "aed_54.56": "एईडी 54.56",
+  "aed": "एईडी",
+  "54.56": "54.56",
   "due_balance": "देय संतुलन",
-  "aed_1000.00": "एईडी 1000.00",
+  "1000.00": "1000.00 ",
   "payment_methods": "भुगतान की विधि",
   "bank": "खाता होना",
   "accounts": "खातों",
@@ -25,8 +26,6 @@
   "credit_cards": "क्रेडिट कार्ड",
   "plexpe": "प्लेक्सपे",
   "wallet": "बटुआ",
-  "plexpe": "प्लेक्सपे",
-  "gift_card": "गिफ़्ट कार्ड",
   "upi_lite": "यूपीआई लाइट",
   "account_summary": "खाता सारांश",
   "funds": "धन",
