--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -37,6 +37,7 @@
   "logout": "الخروج",
   "wallet_:_400_aed": "المحفظة: 400 درهم",
   "history": "تاريخ",
-  "reports": "التقارير"
+  "reports": "التقارير",
+  "plexbill": "بلكس بيل"
 
 }
