--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -37,5 +37,6 @@
   "logout": "Logout",
   "wallet_:_400_aed": "WALLET : 400 AED",
   "history": "History",
-  "reports": "Reports"
+  "reports": "Reports",
+  "plexbill": "PlexBill"
 }
