--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -37,5 +37,6 @@
   "logout": "लॉगआउट",
   "wallet_:_400_aed": "वॉलेट : 400 एईडी",
   "history": "इतिहास",
-  "reports": "रिपोर्ट"
+  "reports": "रिपोर्ट",
+  "plexbill": "प्लेक्सबिल"
 }
