--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -35,7 +35,7 @@
   "profit_summary": "ملخص الأرباح",
   "refund_history": "تاريخ الاسترداد",
   "logout": "الخروج",
-  "wallet_:_400_aed": "المحفظة: 400 درهم",
+  "wallet_:": "المحفظة:",
   "history": "تاريخ",
   "reports": "التقارير",
   "plexbill": "بلكس بيل"
