--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -35,7 +35,7 @@
   "profit_summary": "Profit Summary",
   "refund_history": "Refund History",
   "logout": "Logout",
-  "wallet_:_400_aed": "WALLET : 400 AED",
+  "wallet_:": "WALLET :",
   "history": "History",
   "reports": "Reports",
   "plexbill": "PlexBill"
