--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -35,7 +35,7 @@
   "profit_summary": "लाभ सारांश",
   "refund_history": "धनवापसी इतिहास",
   "logout": "लॉगआउट",
-  "wallet_:_400_aed": "वॉलेट : 400 एईडी",
+  "wallet_:": "वॉलेट :",
   "history": "इतिहास",
   "reports": "रिपोर्ट",
   "plexbill": "प्लेक्सबिल"
