--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -38,5 +38,25 @@
   "wallet_:": "वॉलेट :",
   "history": "इतिहास",
   "reports": "रिपोर्ट",
-  "plexbill": "प्लेक्सबिल"
+  "plexbill": "प्लेक्सबिल",
+  "welcome_to!": "आपका स्वागत है!",
+  "username": "उपयोक्तानाम",
+  "enter_your_username": "अपना उपयोगकर्ता नाम दर्ज करें",
+  "password": "पासवर्ड",
+  "enter_your_password": "अपना पासवर्ड दर्ज करें",
+  "remember_me": "मुझे याद रखें",
+  "sign_in": "साइन इन करें",
+  "dash_board": "डैश बोर्ड",
+  "billing": "बिलिंग",
+  "purchase": "खरीदना",
+  "sale_return": "बिक्री वापसी",
+  "purchase_return": "खरीद वापसी",
+  "today's_sale_:": "आज की बिक्री :",
+  "today's_purchase_:": "आज की खरीद :",
+  "today's_receipt_:": "आज की रसीद :",
+  "today's_payments_:": "आज के भुगतान:",
+  "next": "अगला",
+  "customer_iD": "कस्टमर  परिचय",
+  "filter": "छानना",
+  "transaction_id_:": "लेन-देन आईडी :"
 }
