--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -28,6 +28,7 @@
   "wallet": "محفظة",
   "upi_lite": "يو بي آي لايت",
   "account_summary": "ملخص الحساب",
+  "report":"تقرير",
   "funds": "اموال",
   "transactions": "المعاملات",
   "collections": "مجاميع",
