--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -34,6 +34,7 @@
   "due_summary": "नियत सारांश",
   "profit_summary": "लाभ सारांश",
   "refund_history": "धनवापसी इतिहास",
+  "report": "प्रतिवेदन",
   "logout": "लॉगआउट",
   "wallet_:": "वॉलेट :",
   "history": "इतिहास",
