--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -57,7 +57,7 @@
   "today's_receipt_:": "TODAY'S RECEIPT :",
   "today's_payments_:": "TODAY'S PAYMENTS :",
   "next": "Next",
-  "customer_iD": "Customer ID",
+  "customer_id_:": "Customer ID",
   "filter": "FILTER",
   "transaction_id_:": "Transaction ID :"
 }
