--- a/assets/locales/hi.json
+++ b/assets/locales/hi.json
@@ -57,7 +57,7 @@
   "today's_receipt_:": "आज की रसीद :",
   "today's_payments_:": "आज के भुगतान:",
   "next": "अगला",
-  "customer_iD": "कस्टमर  परिचय",
+  "customer_id_:": "कस्टमर  परिचय",
   "filter": "छानना",
   "transaction_id_:": "लेन-देन आईडी :"
 }
